<resources>
    <string name="app_name">BlckBook</string>
    <string name="invitation_text">
        Let\'s connect via %3$s, a fully decentralized peer-to-peer social network!\n
        \n
        contact: network.onion/%1$s/%2$s\n
        (click after installation to connect)\n
        \n
        onion: http://%1$s.onion/network.onion\n
        \n
        clearnet: http://%1$s.onion.to/network.onion\n
        \n
        ID: %1$s\n
        (copy manually if the links are not displayed correctly)\n
    </string>
        <string name="friend_bot">FRIEND BOT</string>
        <string name="message">Message</string>
        <string name="ahliuh">ahliuh</string>
        <string name="date_sample">1234-12-12 12:12</string>
        <string name="anonymous">Anonymous</string>
        <string name="medium_text">Medium Text</string>
        <string name="no_friends_yet">No friends yet</string>
        <string name="darknet_address">Darknet Address</string>
        <string name="copy">Copy</string>
        <string name="send">Send</string>
        <string name="open">Open</string>
        <string name="clearnet_address">Clearnet Address</string>
        <string name="onion_address_sample">aaaaztah77ekpkip.onion</string>
        <string name="clearnet_onion_address_sample">aaaaztah77ekpkip.onion.to</string>
        <string name="anon_and_secure">Anonymous and most secure way to access your blog. Needs a Tor-enabled web browser.</string>
        <string name="id">ID</string>
        <string name="zero_time">0:00</string>
        <string name="error_permissions_required">Error: Permissions required</string>
        <string name="all_settings_reset">All settings reset</string>
    <string-array name="acceptmessagesvalues">
        <item></item>
        <item>friends</item>
        <item>none</item>
    </string-array>
    <string-array name="acceptmessageslabels">
        <item>Everyone</item>
        <item>Only Friends</item>
        <item>None</item>
    </string-array>
    <string-array name="wallbotintervalvalues">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>600</item>
        <item>1800</item>
        <item>3600</item>
        <item>7200</item>
    </string-array>
    <string-array name="wallbotintervallabels">
        <item>10s</item>
        <item>20s</item>
        <item>30s</item>
        <item>1min</item>
        <item>2min</item>
        <item>5min</item>
        <item>10min</item>
        <item>30min</item>
        <item>1h</item>
        <item>2h</item>
    </string-array>
    <string-array name="ui_page_action_fab_position_values">
        <item>bottom_end</item>
        <item>bottom_start</item>
        <item>top_end</item>
        <item>top_start</item>
        <item>center_bottom</item>
        <item>center_top</item>
    </string-array>
    <string-array name="ui_page_action_fab_position_labels">
        <item>Bottom right</item>
        <item>Bottom left</item>
        <item>Top right</item>
        <item>Top left</item>
        <item>Bottom center</item>
        <item>Top center</item>
    </string-array>
    <string-array name="ui_menu_button_position_values">
        <item>bottom_left</item>
        <item>bottom_center</item>
        <item>bottom_right</item>
    </string-array>
    <string-array name="ui_menu_button_position_labels">
        <item>Bottom left</item>
        <item>Bottom center</item>
        <item>Bottom right</item>
    </string-array>
    <string-array name="ui_chat_composer_style_values">
        <item>default</item>
        <item>compact</item>
        <item>expanded</item>
        <item>left_aligned</item>
    </string-array>
    <string-array name="ui_chat_composer_style_labels">
        <item>Standard</item>
        <item>Compact bubble</item>
        <item>Expanded bubble</item>
        <item>Left-aligned bubble</item>
    </string-array>
    <string-array name="ui_friend_card_style_values">
        <item>default</item>
        <item>compact</item>
        <item>pill</item>
    </string-array>
    <string-array name="ui_friend_card_style_labels">
        <item>Standard</item>
        <item>Compact list</item>
        <item>Pill cards</item>
    </string-array>
    <string-array name="ui_post_layout_style_values">
        <item>standard</item>
        <item>compact</item>
        <item>spacious</item>
    </string-array>
    <string-array name="ui_post_layout_style_labels">
        <item>Standard</item>
        <item>Compact</item>
        <item>Spacious</item>
    </string-array>
    <string-array name="ui_card_corner_radius_values">
        <item>system</item>
        <item>none</item>
        <item>soft</item>
        <item>medium</item>
        <item>rounded</item>
    </string-array>
    <string-array name="ui_card_corner_radius_labels">
        <item>Use style default</item>
        <item>No rounding</item>
        <item>Soft</item>
        <item>Medium</item>
        <item>Rounded</item>
    </string-array>
    <string-array name="ui_color_preset_values">
        <item>system</item>
        <item>midnight</item>
        <item>forest</item>
        <item>sunset</item>
    </string-array>
    <string-array name="ui_color_preset_labels">
        <item>System default</item>
        <item>Midnight</item>
        <item>Forest</item>
        <item>Sunset</item>
    </string-array>
    <string name="theme_dark_mode_title">Dark mode</string>
    <string name="theme_dark_mode_summary_on">Dark theme is enabled</string>
    <string name="theme_dark_mode_summary_off">Light theme is enabled</string>
    <string name="theme_monochrome_mode_title">Monochrome mode</string>
    <string name="theme_monochrome_mode_summary_on">Monochrome surfaces enabled</string>
    <string name="theme_monochrome_mode_summary_off">Neon color accents enabled</string>
    <string name="theme_customization_category">Interface</string>
    <string name="pref_title_color_preset">Color preset</string>
    <string name="pref_title_page_action_fab_position">Page action button position</string>
    <string name="call_action_accept">Accept</string>
    <string name="call_action_hangup">Hang Up</string>
    <string name="call_status_idle">Ready</string>
    <string name="call_status_calling">Calling…</string>
    <string name="call_status_ringing">Incoming call…</string>
    <string name="call_status_connecting">Connecting…</string>
    <string name="call_status_connected">Connected</string>
    <string name="call_status_ended">Call ended</string>
    <string name="call_status_failed">Call failed</string>
    <string name="call_unknown_user">Unknown</string>
    <string name="video_download_preparing">Preparing video…</string>
    <string name="video_download_failed">Could not load video</string>
    <string name="call_toggle_mute">Mute</string>
    <string name="call_toggle_unmute">Unmute</string>
    <string name="call_toggle_hold">Hold</string>
    <string name="call_toggle_resume">Resume</string>
    <string name="call_error_generic">Connection lost</string>
    <string name="call_microphone_permission_required">Microphone permission is required to place calls.</string>
    <string name="bridge_captcha_title">Tor bridge verification</string>
    <string name="bridge_captcha_message">We need to solve a short captcha to download new bridges. Enter the text from the image below.</string>
    <string name="bridge_captcha_input_hint">Captcha answer</string>
    <string name="bridge_captcha_submit">Submit</string>
    <string name="bridge_captcha_cancel">Cancel</string>
    <string name="bridge_captcha_error_generic">Failed to verify captcha. Please try again.</string>
    <string name="bridge_captcha_error_network">Could not contact BridgeDB. Check your connection and retry.</string>
    <string name="bridge_captcha_success">New bridges downloaded. Restarting Tor…</string>
    <string name="bridge_captcha_content_description">Captcha challenge image</string>
    <string name="pref_title_menu_button_position">Menu button position</string>
    <string name="pref_title_friend_card_style">Friend list layout</string>
    <string name="pref_title_chat_composer_style">Message composer layout</string>
    <string name="pref_title_post_layout_style">Post layout</string>
    <string name="pref_title_post_avatar_position">Post avatar alignment</string>
    <string name="pref_title_card_corner_radius">Card corner radius</string>
    <string name="permission_required_title">Permissions required</string>
    <string name="permission_required_positive">Continue</string>
    <string name="permission_required_negative">Cancel</string>
    <string name="permission_initial_message">We need access to your media files to let you share photos and videos, and permission to show notifications for new activity.</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_publish">Publish</string>
    <string name="dialog_button_libraries">Libraries</string>
    <string name="dialog_button_clear">Clear</string>
    <string name="dialog_button_open">Open</string>
    <string name="dialog_button_add_friend">Add Friend</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_view_profile">View Profile</string>
    <string name="dialog_button_remove_friend">Remove friend</string>
    <string name="dialog_button_copy">Copy</string>
    <string name="dialog_button_send">Send</string>
    <string name="dialog_choose_theme_title">Choose a theme</string>
    <string name="dialog_delete_friend_title">Delete Friend?</string>
    <string name="dialog_delete_friend_message">Do you really want to delete this friend?</string>
    <string name="dialog_delete_post_title">Delete Post?</string>
    <string name="dialog_delete_post_message">Do you really want to delete this post?</string>
    <string name="dialog_delete_photo_title">Delete Photo</string>
    <string name="dialog_delete_photo_message">Do you really want to delete this photo?</string>
    <string name="dialog_delete_video_title">Delete Video</string>
    <string name="dialog_delete_video_message">Do you really want to delete this video?</string>
    <string name="dialog_remove_post_title">Remove Post?</string>
    <string name="dialog_remove_post_message">Do you really want to remove this post?</string>
    <string name="dialog_clear_chat_title">Clear chat</string>
    <string name="dialog_clear_chat_message">Do you really want to delete all messages exchanged with this contact?</string>
    <string name="dialog_clear_cache_title">Clear Cache</string>
    <string name="dialog_clear_cache_message">Remove all cache data?</string>
    <string name="can_be_accessed_using_any_web_browser_but_might_like_any_normal_website_reveal_the_viewer_s_identity_to_isp_s_network_operators_or_governments">Can be accessed using any web browser, but might (like any \'normal\' website) reveal the viewer\'s identity to ISP\'s, network operators, or governments.</string>
    <string name="if_the_links_don_t_work_yet_please_check_your_network_connection_and_or_wait_a_few_minutes_for_your_hidden_service_to_be_registered">If the links don\'t work yet, please check your network connection and/or wait a few minutes for your hidden service to be registered.</string>
    <string name="hidden_service_link">Hidden Service Link</string>
    <string name="clearnet_link">Clearnet Link</string>
    <string name="if_the_links_are_not_available_yet_check_your_network_connection_and_or_wait_a_few_minutes_for_the_hidden_service_to_be_registered">If the links are not available yet, check your network connection and/or wait a few minutes for the hidden service to be registered.</string>
</resources>