<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="theme_dark_mode"
        android:defaultValue="true"
        android:title="@string/theme_dark_mode_title"
        android:summaryOn="@string/theme_dark_mode_summary_on"
        android:summaryOff="@string/theme_dark_mode_summary_off" />

    <SwitchPreference
        android:key="theme_monochrome_mode"
        android:defaultValue="false"
        android:title="@string/theme_monochrome_mode_title"
        android:summaryOn="@string/theme_monochrome_mode_summary_on"
        android:summaryOff="@string/theme_monochrome_mode_summary_off" />

    <PreferenceCategory
        android:key="ui_customization"
        android:title="@string/theme_customization_category">

        <onion.network.settings.ListPreferenceEx
            android:key="ui_color_preset"
            android:title="@string/pref_title_color_preset"
            android:defaultValue="system"
            android:entryValues="@array/ui_color_preset_values"
            android:entries="@array/ui_color_preset_labels" />

        <onion.network.settings.ListPreferenceEx
            android:key="ui_call_fab_position"
            android:title="@string/pref_title_page_action_fab_position"
            android:defaultValue="bottom_end"
            android:entryValues="@array/ui_page_action_fab_position_values"
            android:entries="@array/ui_page_action_fab_position_labels" />

        <onion.network.settings.ListPreferenceEx
            android:key="ui_menu_button_position"
            android:title="@string/pref_title_menu_button_position"
            android:defaultValue="bottom_left"
            android:entryValues="@array/ui_menu_button_position_values"
            android:entries="@array/ui_menu_button_position_labels" />

        <onion.network.settings.ListPreferenceEx
            android:key="ui_friend_card_style"
            android:title="@string/pref_title_friend_card_style"
            android:defaultValue="default"
            android:entryValues="@array/ui_friend_card_style_values"
            android:entries="@array/ui_friend_card_style_labels" />

        <onion.network.settings.ListPreferenceEx
            android:key="ui_chat_composer_style"
            android:title="@string/pref_title_chat_composer_style"
            android:defaultValue="default"
            android:entryValues="@array/ui_chat_composer_style_values"
            android:entries="@array/ui_chat_composer_style_labels" />

        <onion.network.settings.ListPreferenceEx
            android:key="ui_post_layout_style"
            android:title="@string/pref_title_post_layout_style"
            android:defaultValue="standard"
            android:entryValues="@array/ui_post_layout_style_values"
            android:entries="@array/ui_post_layout_style_labels" />

        <onion.network.settings.ListPreferenceEx
            android:key="ui_card_corner_radius"
            android:title="@string/pref_title_card_corner_radius"
            android:defaultValue="system"
            android:entryValues="@array/ui_card_corner_radius_values"
            android:entries="@array/ui_card_corner_radius_labels" />

    </PreferenceCategory>

</PreferenceScreen>
