<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geologica_400"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/hidden_service_link" />

            <TextView
                android:id="@+id/onion_link_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geologica_600"
                android:textFontWeight="600"
                android:textColor="?attr/colorOnBackground"
                android:textSize="@dimen/sp16"
                android:paddingBottom="@dimen/dp4"
                android:text="fosuehnvjkdzshaw.onion/network.onion"
                android:textAppearance="?android:attr/textAppearanceLarge"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onion_link_copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="?attr/colorOnBackground"
                    android:backgroundTint="?attr/colorAccent"
                    android:text="Copy" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onion_link_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp4"
                    android:layout_weight="1"
                    android:textColor="?attr/colorOnBackground"
                    android:backgroundTint="?attr/colorAccent"
                    android:text="Share" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onion_link_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="?attr/colorOnBackground"
                    android:backgroundTint="?attr/colorAccent"
                    android:text="Open" />
            </LinearLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp24"></FrameLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geologica_400"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/clearnet_link" />

            <TextView
                android:id="@+id/clearnet_link_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geologica_600"
                android:textFontWeight="600"
                android:textSize="@dimen/sp16"
                android:textColor="?attr/colorOnBackground"
                android:paddingBottom="@dimen/dp4"
                android:text="fosuehnvjkdzshaw.onion.to/network.onion"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clearnet_link_copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="?attr/colorOnBackground"
                    android:backgroundTint="?attr/colorAccent"
                    android:text="Copy" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clearnet_link_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp4"
                    android:layout_weight="1"
                    android:textColor="?attr/colorOnBackground"
                    android:backgroundTint="?attr/colorAccent"
                    android:text="Share" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clearnet_link_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="?attr/colorOnBackground"
                    android:backgroundTint="?attr/colorAccent"
                    android:text="Open" />
            </LinearLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp24"></FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geologica_400"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/if_the_links_are_not_available_yet_check_your_network_connection_and_or_wait_a_few_minutes_for_the_hidden_service_to_be_registered" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>